--- a/css/style.css
+++ b/css/style.css
@@ -33,3 +33,17 @@
     background-color: rgba(255, 166, 0, 0.849);
     padding: 5px;
 }
+
+section {
+    background-color: rgb(6, 6, 153);
+    height: 500px;
+    display: flex;
+}
+
+.box {
+    background-color: rgb(214, 67, 214);
+    height: 400px;
+    width: 800px;
+    margin: 0 auto;
+    margin-top: 50px;
+}
